--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,21 @@
   <!-- Using Local Font -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
+    <!-- bootstrap css -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+
   <title>RMS</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <!-- Add this tags to hook our notifications -->
+  <div class="snackbar-centered">
+    <div id="snackbar-fixed-container" >
+    </div>
+  </div>
 </body>
 
 </html>
